--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=true
-javac.classpath=
+javac.classpath=\
+    ${libs.MYSQL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
